--- a/changelogs/index.html
+++ b/changelogs/index.html
@@ -28,5 +28,6 @@
 <li><a href=ChangeLog_8.0.3.html>ChangeLog_8.0.3.html</a></li>
 <li><a href=ChangeLog_8.0.4.html>ChangeLog_8.0.4.html</a></li>
 <li><a href=ChangeLog_8.1.0.html>ChangeLog_8.1.0.html</a></li>
+<li><a href=ChangeLog_8.2.0.html>ChangeLog_8.2.0.html</a></li>
 </ul>
 </html>
