update changelog -- should be final svn version for 8.5

--- a/changelogs/ChangeLog_8.5.0.html
+++ b/changelogs/ChangeLog_8.5.0.html
@@ -1,6 +1,6 @@
 <html><body>
 <h2>ChangeLog for Emergent Version 8.5.0
-  Revisions 11074:11312</h2>
+  Revisions 11074:11316</h2>
 <table border="1" style="table-layout:fixed;width: 100%;">
 <tr>
 <td width="5%">Rev No.</td>
@@ -2021,6 +2021,32 @@ and updated param notes and defautlts
 <td><pre>2018-01-07</pre></td>
 <td><pre>oreilly</pre></td>
 <td><pre>another attempt to fix windows -- use width of 'm' instead of maxWidth which is returning absurdly large value on windows</pre></td>
+</tr>
+<tr>
+<td><pre>11313</pre></td>
+<td><pre>2018-01-08</pre></td>
+<td><pre>oreilly</pre></td>
+<td><pre>copyright update -- turns out that start date is important so now computing that from svn -- slow but one-time..</pre></td>
+</tr>
+<tr>
+<td><pre>11314</pre></td>
+<td><pre>2018-01-08</pre></td>
+<td><pre>oreilly</pre></td>
+<td><pre>and now for wave 2 -- the update of the update.. now that start year is fixed this will hopefully be the last of those.
+</pre></td>
+</tr>
+<tr>
+<td><pre>11315</pre></td>
+<td><pre>2018-01-08</pre></td>
+<td><pre>oreilly</pre></td>
+<td><pre>sheesh.. some kind of bug in last round -- will need another one after I rebuild..
+</pre></td>
+</tr>
+<tr>
+<td><pre>11316</pre></td>
+<td><pre>2018-01-08</pre></td>
+<td><pre>oreilly</pre></td>
+<td><pre>copyright bug fixed, copyrights updated -- should be it..</pre></td>
 </tr>
 </table>
 </body></html>
