changelog updated  -- NOW should be done

--- a/changelogs/ChangeLog_8.5.0.html
+++ b/changelogs/ChangeLog_8.5.0.html
@@ -1,6 +1,6 @@
 <html><body>
 <h2>ChangeLog for Emergent Version 8.5.0
-  Revisions 11074:11316</h2>
+  Revisions 11074:11318</h2>
 <table border="1" style="table-layout:fixed;width: 100%;">
 <tr>
 <td width="5%">Rev No.</td>
@@ -2047,6 +2047,19 @@ and updated param notes and defautlts
 <td><pre>2018-01-08</pre></td>
 <td><pre>oreilly</pre></td>
 <td><pre>copyright bug fixed, copyrights updated -- should be it..</pre></td>
+</tr>
+<tr>
+<td><pre>11317</pre></td>
+<td><pre>2018-01-08</pre></td>
+<td><pre>oreilly</pre></td>
+<td><pre>update changelog -- should be final svn version for 8.5</pre></td>
+</tr>
+<tr>
+<td><pre>11318</pre></td>
+<td><pre>2018-01-08</pre></td>
+<td><pre>oreilly</pre></td>
+<td><pre>several files were missing comma after year.. and updated basic COPYRIGHT.txt files
+</pre></td>
 </tr>
 </table>
 </body></html>
