changelog updated to 11328 for 8.5

--- a/changelogs/ChangeLog_8.5.0.html
+++ b/changelogs/ChangeLog_8.5.0.html
@@ -1,6 +1,6 @@
 <html><body>
 <h2>ChangeLog for Emergent Version 8.5.0
-  Revisions 11074:11318</h2>
+  Revisions 11074:11328</h2>
 <table border="1" style="table-layout:fixed;width: 100%;">
 <tr>
 <td width="5%">Rev No.</td>
@@ -2060,6 +2060,62 @@ and updated param notes and defautlts
 <td><pre>oreilly</pre></td>
 <td><pre>several files were missing comma after year.. and updated basic COPYRIGHT.txt files
 </pre></td>
+</tr>
+<tr>
+<td><pre>11319</pre></td>
+<td><pre>2018-01-08</pre></td>
+<td><pre>oreilly</pre></td>
+<td><pre>changelog updated  -- NOW should be done</pre></td>
+</tr>
+<tr>
+<td><pre>11320</pre></td>
+<td><pre>2018-01-08</pre></td>
+<td><pre>oreilly</pre></td>
+<td><pre>webview -&gt; webkit in configure</pre></td>
+</tr>
+<tr>
+<td><pre>11321</pre></td>
+<td><pre>2018-01-08</pre></td>
+<td><pre>oreilly</pre></td>
+<td><pre>damn kna_adapt was on in LeabraStd..
+</pre></td>
+</tr>
+<tr>
+<td><pre>11323</pre></td>
+<td><pre>2018-01-09</pre></td>
+<td><pre>oreilly</pre></td>
+<td><pre>* fix for crash when loading old colorscale versions
+* update version in emergent.app to 8.5
+</pre></td>
+</tr>
+<tr>
+<td><pre>11324</pre></td>
+<td><pre>2018-01-09</pre></td>
+<td><pre>rohrlich</pre></td>
+<td><pre>- Move the NetTextItems and logic from NetView to new class NetStateText for use with both NetView and BrainView
+- All working with NetView
+</pre></td>
+</tr>
+<tr>
+<td><pre>11326</pre></td>
+<td><pre>2018-01-09</pre></td>
+<td><pre>oreilly</pre></td>
+<td><pre>update version to 8.5.1 now that major new changes being made..
+</pre></td>
+</tr>
+<tr>
+<td><pre>11327</pre></td>
+<td><pre>2018-01-09</pre></td>
+<td><pre>oreilly</pre></td>
+<td><pre>Important fix for GetOff_static with multiple inheritance members -- could have many effects
+so we'll need to re-release 8.5
+</pre></td>
+</tr>
+<tr>
+<td><pre>11328</pre></td>
+<td><pre>2018-01-09</pre></td>
+<td><pre>oreilly</pre></td>
+<td><pre>revert version to 8.5.0 -- we have svn rev to track the diff and not worth version bump</pre></td>
 </tr>
 </table>
 </body></html>
