--- a/changelogs/index.html
+++ b/changelogs/index.html
@@ -30,5 +30,6 @@
 <li><a href=ChangeLog_8.1.0.html>ChangeLog_8.1.0.html</a></li>
 <li><a href=ChangeLog_8.2.0.html>ChangeLog_8.2.0.html</a></li>
 <li><a href=ChangeLog_8.5.0.html>ChangeLog_8.5.0.html</a></li>
+<li><a href=ChangeLog_8.5.1.html>ChangeLog_8.5.1.html</a></li>
 </ul>
 </html>
